static/upload_style.css
body {
  font-family: 'Roboto Slab', serif;
  margin: 0;
}

#navbar {
  height: 50px;
  width: 100%;
  background-color: #eaeaea;
  position: sticky;
  padding: 5px;
  margin: 0;
  float: left;
  z-index: 1;
}

#navbar p {
  color: #898989;
  font-style: italic;
  text-align: center;
}


#navbar_title {
  margin: auto;
}

#maintext {
  filter: blur(5px);
  width: 100%;
  height: 100%;
  background-image: url("Worldmap.jpg");
}

/* form {
  margin: auto;
  z-index: 1;
  top: -50%;
  position: relative;
} */

#form {
  margin: auto;
  z-index: 1;
  padding: 20px;
  width: 300px;
  top: -60%;
  background-color: #fff;
  border-radius: 5%;
  position: relative;
}

#form div {
  padding-bottom: 5px;
}

#submission_button {
  padding-top: 10px;
  text-align: center;
}

